recent changes skycons and spacing issues

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -5,7 +5,7 @@ page-home {
          align-items: baseline;
     }
 
-    
+    font-size:15px;
 }
 
 home{
@@ -61,7 +61,7 @@ home{
         }
         p{
             color:#FFF;
-            font-size: 12px;
+            font-size: 13px;
             margin-top: -5px;
         }
 
