--- a/src/pages/home/mitigation-action.scss
+++ b/src/pages/home/mitigation-action.scss
@@ -20,5 +20,6 @@ mitigating-action{
                 margin-top:8px;
                 margin-bottom: 5px;
             }
+            font-size:15px;
    
 }
