--- a/src/pages/ponds/modal-ponds.scss
+++ b/src/pages/ponds/modal-ponds.scss
@@ -121,5 +121,6 @@ add-pond, edit-pond{
 
     form, input, optgroup, select {
         margin-top: 10px;
+        font-size:15px
     }
 }
